# immolate

./: cabal.project  hpack-all.sh  stack.yaml
immolate/: CHANGELOG.md  LICENSE  README.md  immolate.cabal  package.yaml  stack.yaml
immolate/bench/: Main.hs
immolate/src/: Immolate.hs  Main.hs
immolate/src/Blaze/ByteString/Builder/Html/: Utf8.hs  Word.hs
immolate/src/Immolate/: Base.hs  Html5.hs
immolate/src/Immolate/Monad/: Writer.hs
immolate/test/: Main.hs
servant-immolate/: package.yaml  servant-immolate.cabal
servant-immolate/spec/Servant/: ImmolateSpec.hs
servant-immolate/src/Servant/: Immolate.hs
servant-immolate/src/Servant/Immolate/: ContentType.hs  Links.hs
