name:                immolate
version:             0.1.0.0
synopsis:            Clear to write, read and edit DSL for HTML
description:
  Clear to write, read and edit DSL for HTML.
  .
  * Names are consistent, and do not conflict with base or are keywords (all have suffix @_@)
  .
  * Same combinator can be used for attributes and elements (e.g. 'style_')
  .
  See the "Immolate" module for more documentation.

homepage:            https://github.com/intolerable/immolate
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
copyright:           2023 Fraser Murray
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, CHANGELOG.md

library
  default-language:  Haskell2010
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Immolate
                     Immolate.Base
                     Immolate.Html5

  -- These have been inlined from the blaze-builder package, so that
  -- all dependencies are GHC boot libraries.
  other-modules: Blaze.ByteString.Builder.Char.Utf8
                 Blaze.ByteString.Builder.Html.Utf8
                 Blaze.ByteString.Builder.Html.Word

  -- GHC boot libraries
  build-depends:     base          >= 4.8 && < 4.19
                   , bytestring    >= 0.10.12.0
                   , containers    >= 0.6.5.1
                   , transformers  >= 0.5.6.2
                   , mtl           >= 2.2.2
                   , text          >= 1.2.4.1

source-repository head
  type:     git
  location: https://github.com/intolerable/immolate.git

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: base,
                   immolate,
                   HUnit,
                   hspec,
                   parsec,
                   bifunctors,
                   text,
                   mtl
